clusters/k3s-cluster/openwebui/openwebui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: openwebui.jacobbanghart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
  tls:
    - hosts:
        - openwebui.jacobbanghart.com
      secretName: openwebui-tls
