clusters/k3s-cluster/openwebui/openwebui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /dev/dri
              name: dri
            - mountPath: /app/backend/data
              name: data
      volumes:
        - name: dri
          hostPath:
            path: /dev/dri
        - name: data
          persistentVolumeClaim:
            claimName: openwebui-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/buffering: "false"
spec:
  rules:
  - host: openwebui.jacobbanghart.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openwebui
            port:
              number: 8080
  tls:
  - hosts:
    - openwebui.jacobbanghart.com
    secretName: openwebui-tls
